--- a/app/view/admin/post-list.html
+++ b/app/view/admin/post-list.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <script src="../../assets/js/chart.js"></script>
@@ -114,126 +115,79 @@
                 <div class="content__wrapper mrg-top-40">
                     <div class="row no-gutters font-rajdhani">
                         <!-- Stretch card -->
-                        <div class="l-3 m-6 c-6">
+                        <div class="l-4 m-6 c-12">
                             <div class="stretch__card">
                                 <div id="user__count" class="stretch__card-heading">
-                                    Tài khoản
+                                    Post
                                 </div>
                                 <div class="stretch__card-body">
                                     80
                                 </div>
                             </div>
                         </div>
-                        <div class="l-3 m-6 c-6">
+                        <div class="l-4 m-6 c-12">
                             <div class="stretch__card">
                                 <div id="onl__count" class="stretch__card-heading">
-                                    Online
+                                    Báo cáo
                                 </div>
                                 <div class="stretch__card-body">
                                     3
                                 </div>
                             </div>
                         </div>
-                        <div class="l-3 m-6 c-6">
+                        <div class="l-4 m-6 c-12">
                             <div class="stretch__card">
                                 <div id="log__count" class="stretch__card-heading">
-                                    Truy cập
+                                    Gỡ xuống
                                 </div>
                                 <div class="stretch__card-body">
                                     50
                                 </div>
                             </div>
                         </div>
-                        <div class="l-3 m-6 c-6">
-                            <div class="stretch__card">
-                                <div id="post__count" class="stretch__card-heading">
-                                    Lượt post
-                                </div>
-                                <div class="stretch__card-body">
-                                    10
-                                </div>
-                            </div>
-                        </div>
                     </div>
-                    <div class="row no-gutters font-rajdhani mrg-top-80">
-                        <!-- Client log -->
-                        <div class="l-6 m-12 c-12">
-                            <div class="box__half pad-30">
-                                <div class="box__heading">
-                                    Client log
-                                </div>
-                                <div class="box__content">
-                                    <ul class="row no-gutters table__log">
-                                        <li class="l-2 m-2 c-2 table__log-col">
-                                            Id
-                                        </li>
-                                        <li class="l-6 m-6 c-6 table__log-col">
-                                            Username
-                                        </li>
-                                        <li class="l-4 m-4 c-4 table__log-col">
-                                            Time
-                                        </li>
-                                    </ul>
-                                    <ul class="row no-gutters table__log__item">
-                                        <li class="l-2 m-2 c-2 tabl__log__cell">
-                                            1
-                                        </li>
-                                        <li class="l-6 m-6 c-6 tabl__log__cell">
-                                            <a class="log__thumb" href="">
-                                                <img class="circle-avatar log__avatar" src="../../assets/img/avatar/186608.jpg" alt="">
-                                                <span class="log__username">Gaughegom</span>
-                                            </a>
-                                        </li>
-                                        <li class="l-4 m-4 c-4 tabl__log__cell">
-                                            2021-06-22 10:09:30
-                                        </li>
-                                    </ul>
-                                    <ul class="row no-gutters table__log__item">
-                                        <li class="l-2 m-2 c-2 tabl__log__cell">
-                                            2
-                                        </li>
-                                        <li class="l-6 m-6 c-6 tabl__log__cell">
-                                            <a class="log__thumb" href="">
-                                                <img class="circle-avatar log__avatar" src="../../assets/img/avatar/186608.jpg" alt="">
-                                                <span class="log__username">Gaughegom</span>
-                                            </a>
-                                        </li>
-                                        <li class="l-4 m-4 c-4 tabl__log__cell">
-                                            2021-06-22 10:09:30
-                                        </li>
-                                    </ul>
-                                    <ul class="row no-gutters table__log__item">
-                                        <li class="l-2 m-2 c-2 tabl__log__cell">
-                                            3
-                                        </li>
-                                        <li class="l-6 m-6 c-6 tabl__log__cell">
-                                            <a class="log__thumb" href="">
-                                                <img class="circle-avatar log__avatar" src="../../assets/img/avatar/186608.jpg" alt="">
-                                                <span class="log__username">Gaughegom</span>
-                                            </a>
-                                        </li>
-                                        <li class="l-4 m-4 c-4 tabl__log__cell">
-                                            2021-06-22 10:09:30
-                                        </li>
-                                    </ul>
+                    <!-- Post -->
+                    <div class="post__area">
+                        <div class="row no-gutters font-rajdhani mrg-top-40 flex-row-center">
+                            <div class="post__link l-8 m-10 c-12" href=""> 
+                                <div class="post__box border-radius-smooth box-shadow-6">
+                                    <div class="post__heading">
+                                        <img class="circle-avatar post-avatar" src="../../assets/img/avatar/186608.jpg" alt="">
+                                        <div class="post__own__username">Gaughegom</div>
+                                        <span class="post__setting">
+                                            <i class="fas fa-ellipsis-h"></i>
+                                            <ul class="post__setting-list--admin box-shadow-6">
+                                                <li class="post__setting-item">
+                                                    Gỡ cờ
+                                                </li>
+                                                <li class="post__setting-item">
+                                                    Gỡ bài viết
+                                                </li>
+                                            </ul>
+                                        </span>
+                                    </div>
+                                    <a class="post__body" href="">
+                                        <div class="post__content font-roboto-300">
+                                            <span class="post__time">2021 06 13</span>
+                                            <span class="post__content-dot"></span>
+                                            Đây là post để test tính năng list danh sách post Đây là post để test tính năng list danh sách post Đây là post để test tính năng list danh sách post Đây là post để test tính năng list danh sách post 
+                                        </div>
+                                        <div class="post__image__box">
+                                            <img class="post__image" src="../../assets/img/post/pixel-slide1.jpg" alt="">
+                                        </div>
+                                    </a>
+                                    <div class="post__footer">
+                                        <span id="comment_nums" class="post__detail">23 comments</span>
+                                        <span id="shared_nums" class="post__detail">2 shares</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <!-- Line chart -->
-                        <div class="l-6 m-12 c-12">
-                            <div class="box__half pad-30">
-                                <div class="box__heading">
-                                    <canvas id="line__chart-user"></canvas> 
-                                </div>
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <script>
-        LineChart();
-    </script>
 </body>
 </html>
