--- a/app/view/admin/user-list.html
+++ b/app/view/admin/user-list.html
@@ -127,113 +127,63 @@
                         <div class="l-3 m-6 c-6">
                             <div class="stretch__card">
                                 <div id="onl__count" class="stretch__card-heading">
-                                    Online
+                                    Trong tuần
                                 </div>
                                 <div class="stretch__card-body">
                                     3
                                 </div>
                             </div>
                         </div>
-                        <div class="l-3 m-6 c-6">
-                            <div class="stretch__card">
-                                <div id="log__count" class="stretch__card-heading">
-                                    Truy cập
-                                </div>
-                                <div class="stretch__card-body">
-                                    50
-                                </div>
-                            </div>
-                        </div>
-                        <div class="l-3 m-6 c-6">
-                            <div class="stretch__card">
-                                <div id="post__count" class="stretch__card-heading">
-                                    Lượt post
-                                </div>
-                                <div class="stretch__card-body">
-                                    10
-                                </div>
-                            </div>
-                        </div>
+                        
                     </div>
-                    <div class="row no-gutters font-rajdhani mrg-top-80">
-                        <!-- Client log -->
-                        <div class="l-6 m-12 c-12">
+                    <div class="row no-gutters font-rajdhani mrg-top-40">
+                       <div class="l-12 m-12 c-12">
                             <div class="box__half pad-30">
-                                <div class="box__heading">
-                                    Client log
+                                <div class="box__heading font-28">
+                                    User list
                                 </div>
-                                <div class="box__content">
+                                <div class="box__content mrg-top-40">
                                     <ul class="row no-gutters table__log">
-                                        <li class="l-2 m-2 c-2 table__log-col">
-                                            Id
-                                        </li>
-                                        <li class="l-6 m-6 c-6 table__log-col">
+                                        <li class="l-3 m-3 c-3 table__log-col">
                                             Username
                                         </li>
-                                        <li class="l-4 m-4 c-4 table__log-col">
-                                            Time
+                                        <li class="l-3 m-3 c-3 table__log-col">
+                                            Realname
+                                        </li>
+                                        <li class="l-3 m-3 c-3 table__log-col">
+                                            Email
+                                        </li>
+                                        <li class="l-3 m-3 c-3 table__log-col">
+                                            Date create
                                         </li>
                                     </ul>
-                                    <ul class="row no-gutters table__log__item">
-                                        <li class="l-2 m-2 c-2 tabl__log__cell">
-                                            1
-                                        </li>
-                                        <li class="l-6 m-6 c-6 tabl__log__cell">
-                                            <a class="log__thumb" href="">
-                                                <img class="circle-avatar log__avatar" src="../../assets/img/avatar/186608.jpg" alt="">
-                                                <span class="log__username">Gaughegom</span>
-                                            </a>
-                                        </li>
-                                        <li class="l-4 m-4 c-4 tabl__log__cell">
-                                            2021-06-22 10:09:30
-                                        </li>
-                                    </ul>
-                                    <ul class="row no-gutters table__log__item">
-                                        <li class="l-2 m-2 c-2 tabl__log__cell">
-                                            2
-                                        </li>
-                                        <li class="l-6 m-6 c-6 tabl__log__cell">
-                                            <a class="log__thumb" href="">
-                                                <img class="circle-avatar log__avatar" src="../../assets/img/avatar/186608.jpg" alt="">
-                                                <span class="log__username">Gaughegom</span>
-                                            </a>
-                                        </li>
-                                        <li class="l-4 m-4 c-4 tabl__log__cell">
-                                            2021-06-22 10:09:30
-                                        </li>
-                                    </ul>
-                                    <ul class="row no-gutters table__log__item">
-                                        <li class="l-2 m-2 c-2 tabl__log__cell">
-                                            3
-                                        </li>
-                                        <li class="l-6 m-6 c-6 tabl__log__cell">
-                                            <a class="log__thumb" href="">
-                                                <img class="circle-avatar log__avatar" src="../../assets/img/avatar/186608.jpg" alt="">
-                                                <span class="log__username">Gaughegom</span>
-                                            </a>
-                                        </li>
-                                        <li class="l-4 m-4 c-4 tabl__log__cell">
-                                            2021-06-22 10:09:30
-                                        </li>
-                                    </ul>
+                                    <a href="">
+                                        <ul class="row no-gutters table__log__item hover-08">
+                                            <li class="l-3 m-3 c-3 tabl__log__cell">
+                                                <span class="log__thumb" href="">
+                                                    <img class="circle-avatar log__avatar" src="../../assets/img/avatar/186608.jpg" alt="">
+                                                    <span class="log__username">Gaughegom</span>
+                                                </span>
+                                            </li>
+                                            <li class="l-3 m-3 c-3 tabl__log__cell">
+                                                Hưng nguyễn 
+                                            </li>
+                                            <li class="l-3 m-3 c-3 tabl__log__cell">
+                                                gaughegom@gmail.com
+                                            </li>
+                                            <li class="l-3 m-3 c-3 tabl__log__cell">
+                                                2021-06-22 10:09:30
+                                            </li>
+                                        </ul>
+                                    </a>
+                                    
                                 </div>
                             </div>
-                        </div>
-                        <!-- Line chart -->
-                        <div class="l-6 m-12 c-12">
-                            <div class="box__half pad-30">
-                                <div class="box__heading">
-                                    <canvas id="line__chart-user"></canvas> 
-                                </div>
-                            </div>
-                        </div>
+                       </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <script>
-        LineChart();
-    </script>
 </body>
 </html>
