--- a/app/view/admin/post-list.html
+++ b/app/view/admin/post-list.html
@@ -146,8 +146,9 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Post -->
+                    <!-- Post area-->
                     <div class="post__area">
+                        <!-- Post -->
                         <div class="row no-gutters font-rajdhani mrg-top-40 flex-row-center">
                             <div class="post__link l-8 m-10 c-12" href=""> 
                                 <div class="post__box border-radius-smooth box-shadow-6">
