--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -396,12 +396,62 @@
     border-radius: 12px;
 }
 
+.post__setting {
+    position: relative;
+}
+
 .post__setting i {
     padding: 4px 12px;
     background: #e8e8e8;
     border-radius: 12px;
     font-size: 14px;
     transform: translateY(50%);
+}
+
+.post__setting-list {
+    position: absolute;
+    width: 160px;
+    background: var(--blue-white-color);
+    top: 38px;
+    right: 0;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    display: none;
+    z-index: 4;
+}
+
+.post__setting-list::before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 10px;
+    position: absolute;
+    top: -10px;
+    color: transparent;
+}
+
+.post__setting-select {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 12px;
+    font-size: 16px;
+}
+
+.post__setting-select:last-of-type {
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+
+.post__setting-select:hover {
+    background: var(--white-color);
+    color: var(--gray-text-color);
+}
+
+.post__setting:hover .post__setting-list {
+    display: block;
 }
 
 .post__content {
@@ -487,6 +537,7 @@
 .post__user__comment-setting {
     align-self: center;
     font-size: 12px;
+    position: relative;
 }
 
 .post__user__comment-setting i {
@@ -498,6 +549,44 @@
 
 .post__user__comment-setting i:hover {
     background: #f0f2f5;
+}
+
+.post__user__comment-setting-list {
+    position: absolute;
+    width: 170px;
+    right: 0;
+    border-radius: 8px;
+    background: var(--white-color);
+    z-index: 4;
+    display: none;
+}
+
+.post__user__comment-setting-list::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 10px;
+    top: -10px;
+    color: transparent;
+}
+
+.post__user__comment-setting:hover .post__user__comment-setting-list {
+    display: block;
+}
+
+.post__user__comment-setting-select {
+    padding: 12px;
+    font-size: 16px;
+}
+
+.post__user__comment-setting-select:last-of-type {
+    border-bottom-right-radius: 8px;
+    border-bottom-left-radius: 8px;
+}
+
+.post__user__comment-setting-select:hover {
+    background: var(--blue-white-color);
+    color: var(--gray-text-color);
 }
 
 .teleport__top {
@@ -804,4 +893,144 @@ input[type=number]::-webkit-inner-spin-button {
 
 .post__mini__footer span {
     margin: 0 8px;
+}
+
+/* Edit post */
+.edit__post-frame {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 4;
+    display: none;
+    animation: fadeIn ease-in 0.2s;
+}
+
+.form__edit__post {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.form__edit-heading {
+    padding: 32px 0;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    border-bottom: 1px solid #e1e1e1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+#close__edit {
+    position: absolute;
+    right: 20px;
+    padding: 5px 10px;
+    background: #d6d8df;
+    border-radius: 20px;
+    color: var(--gray-text-color);
+}
+
+.form__edit-body {
+    padding: 16px;
+}
+
+.form__edit-body--top {
+    display: flex;
+    align-items: center;
+    padding-bottom: 12px;
+}
+
+.edit__mode {
+    width: 50px;
+    text-align: center;
+    background: #d6d8df;
+    font-size: 12px;
+    padding: 2px;
+    border-radius: 12px;
+    position: relative;
+}
+
+.form__edit-content {
+    padding: 12px 0;
+    font-size: 18px;
+    color: var(--gray-text-color);
+}
+
+.mode-list {
+    position: absolute;
+    width: 140px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    background: var(--white-color);
+    border-radius: 12px;
+    top: 22px;
+    left: 0;
+    display: none;
+    z-index: 6;
+}
+
+.mode-list::before {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 10px;
+    top: -10px;
+    color: transparent;
+}
+
+.mode-select {
+    display: flex;
+    width: 100%;
+    padding: 12px 12px;
+    font-size: 16px;
+}
+
+.mode-select:last-of-type {
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+}
+
+.mode-select:hover {
+    background: var(--blue-white-color);
+    color: #515151;
+}
+
+.edit__mode:hover .mode-list{
+    display: flex;
+}
+
+.form__edit__image {
+    width: 100%;
+    position: relative;
+}
+
+#edit-post-image {
+    position: absolute;
+    visibility: hidden;
+}
+
+.form__edit__image label {
+    position: absolute;
+    left: 0;
+    margin-top: 10px;
+    margin-left: 10px;
+    padding: 8px 22px;
+    background: var(--white-color);
+    border-radius: 12px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.post__image {
+    width: 100%;
+    object-fit: contain;
 }
