--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -1059,3 +1059,54 @@ input[type=number]::-webkit-inner-spin-button {
     background: var(--primary-color);
     color: var(--white-color);
 }
+
+
+/* Form đăng ký */
+.form__register {
+    margin-top: 80px;
+    padding: 60px;
+    border-radius: 8px;
+    width: 500px;
+}
+
+.form__heading {
+    padding: 16px 0;
+    text-align: center;
+    font-size: 20px;
+}
+
+.form__group {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 8px 0;
+}
+
+.form__group label {
+    font-size: 18px;
+    padding: 8px 0;
+}
+
+.form__group-input {
+    width: 100%;
+    padding: 8px 12px;
+    font-size: 18px;
+    border: 1px solid transparent;
+    outline: none;
+    border-radius: 8px;
+    background: var(--blue-white-color);
+}
+
+.form__group-input:focus {
+    transition: 0.2s;
+    border-color: var(--primary-color);
+}
+
+#response__msg {
+    width: 100%;
+    padding: 8px;
+    text-align: center;
+    font-size: 14px;
+    color: crimson;
+}
