--- a/app/view/my-account/post.html
+++ b/app/view/my-account/post.html
@@ -119,91 +119,32 @@
                <div class="row l-9 m-9 c-9">
                    <div class="l-12 m-12 c-12">
                        <div class="pad-30">
-                           <form class="form__profile" method="POST" action="">
-                                <div class="form__profile-heading font-rajdhani">
-                                    <h3>Thông tin</h3>
-                                </div>
-                                <div class="form__profile-group">
-                                    <label class="font-rajdhani">Avatar</label>
-                                    <div class="flex-row flex-align">
-                                        <img class="circle-avatar profile__avatar" src="../../assets/img/avatar/186608.jpg" alt="">
-                                        <div class="button__wrap">
-                                            <label for="upload-avatar">Upload file</label>
-                                            <input type="file" name="avatar" id="upload-avatar">
+                        <div class="post__box border-radius-smooth ground-color-white box-shadow-6">
+                            <div class="post__box-body">
+                                <div class="post__heading">
+                                    <div class="flex-col pad-left-12 flex-growth-2">
+                                        <span class="font-verdana--geneva post__owner">Hưng Nguyễn</span>
+                                        <div style="display: flex;">
+                                            <span class="post__mode">
+                                                <i class="fas fa-unlock-alt"></i>
+                                            </span>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="form__profile-group">
-                                    <label class="font-rajdhani">Họ tên</label>
-                                    <input class="form__profile-input" type="text">
+                                <div class="post__content">
+                                    <textarea name="content" class="" cols="30" rows="2"></textarea>
                                 </div>
-                                <div class="form__profile-group">
-                                    <label class="font-rajdhani">Email</label>
-                                    <input class="form__profile-input" type="text">
-                                </div>
-                                <div class="form__profile-group">
-                                    <label class="font-rajdhani">Số điện thoại</label>
-                                    <input class="form__profile-input" type="number">
-                                </div>
-                                <div class="form__profile-group">
-                                    <label class="font-rajdhani">Giới tính</label>
-                                    <div class="flex-row flex-align space-around" style="width: 100%;">
-                                        <div class="form__profile-gender">
-                                            <label for="male-gender">Nam</label>
-                                            <input type="radio" name="gender" id="male-gender">
-                                        </div>
-                                        <div class="form__profile-gender">
-                                            <label for="male-gender">Nữ</label>
-                                            <input type="radio" name="gender" id="female-gender">
-                                        </div>
-                                        <div class="form__profile-gender">
-                                            <label for="male-gender">Khác</label>
-                                            <input type="radio" name="gender" id="other">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form__profile-group">
-                                    <label class="font-rajdhani">Địa chỉ</label>
-                                    <input class="form__profile-input" type="text">
-                                </div>
-                                <div class="form__profile-group">
-                                    <label class="font-rajdhani">Link</label>
-                                    <input class="form__profile-input" type="text" placeholder="your link">
-                                </div>
-                                <div class="form__profile-group">
-                                    <label class="font-rajdhani">Mô tả</label>
-                                    <textarea class="form__profile-input" name="" rows="5"></textarea>
-                                </div>
-                                <div class="form__profile-group">
-                                    <button class="submit-button--smooth">Cập nhập</button>
-                                </div>
-                           </form>
+                            </div>
+                            <div class="post__box-image">
+                                <img src="../../assets/img/post/pixel-slide1.jpg" alt="">
+                            </div>
+                            <div class="post__footer">
+                                <label for="upload__image-post">Upload image</label>
+                                <input type="file" id="upload__image-post">
+                            </div>
+                        </div>
                        </div>
                    </div>
-                   <div class="l-12 m-12 c-12">
-                        <div class="pad-30">
-                            <form class="form__profile" method="POST" action="">
-                                <div class="form__profile-heading font-rajdhani">
-                                    <h3>Đổi mật khẩu</h3>
-                                </div>
-                                <div class="form__profile-group">
-                                    <label class="font-rajdhani">Mật khẩu hiện tại</label>
-                                    <input class="form__profile-input" type="password">
-                                </div>
-                                <div class="form__profile-group">
-                                    <label class="font-rajdhani">Nhập mật khẩu mới</label>
-                                    <input class="form__profile-input" type="password">
-                                </div>
-                                <div class="form__profile-group">
-                                    <label class="font-rajdhani">Nhập lại mật khẩu</label>
-                                    <input class="form__profile-input" type="password">
-                                </div>
-                                <div class="form__profile-group">
-                                    <button class="submit-button--smooth">Cập nhập</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
                </div>
            </div>
        </div>
