--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -7,7 +7,7 @@
     left: 0;
     right: 0;
     background: var(--white-color);
-    z-index: 2;
+    z-index: 4;
 }
 
 .nav__header {
@@ -113,6 +113,17 @@
     color: var(--header-hover);
 }
 
+.user__action-link {
+    display: block;
+    width: 100%;
+    padding: 4px;
+    color: var(--text-color);
+}
+
+.user__action-link:hover {
+    color: var(--header-hover);
+}
+
 .nav__list-item:hover .nav__user__action {
     display: block;
 }
@@ -179,6 +190,7 @@
 
 /* footer */
 .footer {
+    margin-top: 60px;
     padding: 30px 0;
     background: #323437;
 }
@@ -523,8 +535,15 @@
 }
 
 .post__user__comment-name {
-    font-size: 16px;
+    font-size: 18px;
     color: var(--gray-text-color);
+}
+
+.post__user__comment-time {
+    margin-left: 12px;
+    font-size: 14px;
+    font-weight: 500;
+    color: #727272;
 }
 
 .post__user__comment-content {
@@ -896,7 +915,7 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 /* Edit post */
-.edit__post-frame, .edit__comment-frame {
+.edit__post-frame, .edit__comment-frame, .add__comment-frame {
     width: 100vw;
     height: 100vh;
     position: fixed;
@@ -916,7 +935,7 @@ input[type=number]::-webkit-inner-spin-button {
     flex-direction: column;
 }
 
-.form__edit-heading {
+.form__heading {
     padding: 32px 0;
     text-align: center;
     font-size: 20px;
@@ -1036,13 +1055,13 @@ input[type=number]::-webkit-inner-spin-button {
     object-fit: contain;
 }
 
-.form__edit__comment {
+.form__comment {
     display: flex;
     flex-direction: column;
     padding: 40px;
 }
 
-#edit__comment-input {
+#edit__comment-input, #add__comment-input {
     resize: none;
     border-radius: 8px;
     padding: 12px;
@@ -1050,7 +1069,7 @@ input[type=number]::-webkit-inner-spin-button {
     outline: none;
 }
 
-.form__edit__comment button {
+.form__comment button {
     margin-top: 16px;
     font-size: 18px;
     padding: 8px;
